@@ -4,6 +4,11 @@ CHANGE LOG
 
 Changes up to 0.99
 
+    beta12
+
+    * fixed setting side effects bug introduced in beta 11
+
+    * faster transparency drawing (sorting)
 
     beta11
 
